--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,8 @@ pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
   didhetero: didhetero.html
-last_built: 2025-07-23T01:44Z
+  overview: overview.html
+last_built: 2025-07-24T02:26Z
 urls:
   reference: https://tkhdyanagi.github.io/didhetero/reference
   article: https://tkhdyanagi.github.io/didhetero/articles
